--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "rfdc": "^1.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
